Adds MockSolution to simplify tests